# ed-neutron-plotter

./: .gitignore  AGENTS.md  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.js
assets/: index-BHRWzQzo.js  index-Ca8Zxe53.css  index-DF-YLB3i.js  index-Dc04XD7c.js  rust_module_bg-Dgnr2KQs.wasm  web-worker-DZHTe5pk.js  web-worker-DwIXl5BJ.js
rust-module/: .gitattributes  .gitignore  Cargo.toml  README.md  galaxy.rkyv
rust-module/src/: basic_trie.rs  fast_json_parser.rs  galaxy_parser.rs  gen_star_data.rs  kdtree.rs  lib.rs  louds_trie.rs  ordered_f32.rs  plotter.rs  star.rs  system.rs  trie.rs
script/: gen_data.go
src/: api.ts  galaxy.ts  line-points.ts  main.ts  main.tsx  route-dialog.module.css  route-dialog.ts  route-line.ts  search.module.css  search.ts  spansh-import.ts  style.css  ui.module.css  web-worker.ts
src/api/: eddb.ts  index.ts  spansh.ts
src/journal/: file-system-observer.d.ts  journal-dialog.module.css  journal-dialog.ts  journal.ts
src/ui/: HamburgerMenu.tsx  ImportSpanshDialog.tsx  JournalDialog.module.css  JournalDialog.tsx  RouteDialog.module.css  RouteDialog.tsx  RouteListPanel.tsx  SearchBar.tsx  SearchBox.module.css  SearchBox.tsx  TargetInfo.tsx  UI.module.css  UI.tsx  focusStorage.ts  routeStorage.ts  shared.module.css  theme.ts  toast.tsx  types.ts
src/ui/components/: Button.tsx  DraggablePanel.tsx
src/ui/state/: journalModel.ts  localStorage.ts  routeModel.ts
