[package]
name = "rust-module"
version = "0.1.0"
authors = ["aarol <aarol@iki.fi>"]
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "gen_star_data"
path = "src/bin/gen_star_data.rs"

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
byteorder = "1.5.0"
serde_derive = "1.0.228"
serde = "1.0.228"
simd-json = "0.17.0"
rayon = "1.11.0"
memchr = "2.7"
serde-wasm-bindgen = "0.6.5"
kiddo = { version = "5.2.3", features =  ["rkyv_08"] }
rkyv = "0.8.12"
bitvec = "1.0.1"
rustc-hash = "2.1.1"
js-sys = "0.3.83"
# Succinct 0.5.2 doesn't support 32 bit, but the main branch does
# Remove when 0.5.3 lands
succinct = {git = "https://github.com/tov/succinct-rs"}

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
